Rectified spacing issue on mobile

--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ body {
 body::after {
   position: absolute;
   content: '';
-  width: 320px;
-  height: 320px;
+  width: 280px;
+  height: 280px;
   bottom: 0;
   left: 0;
   background-image: url(./images/BG.png);
@@ -50,7 +50,7 @@ main {
   width: 100%;
   max-width: 600px;
   min-height: 100vh;
-  padding: 2rem 1rem;
+  padding: 4rem 1rem 2rem;
 }
 
 .content {
@@ -59,7 +59,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2.5rem;
+  gap: 1.5rem;
 }
 
 .logo {
